--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
+  height: 100vh;
+  width: 100vw;
   text-align: center;
   background-image: url("./images/background.jpg");
-  background-size: 100vh;
+  background-size: 100vw 100vh;
   background-repeat: no-repeat;
 }
 
